Changing min-height form product.css to global stylesheet

--- a/styles/global.css
+++ b/styles/global.css
@@ -24,6 +24,11 @@ body {
 	font-family: var(--font-primary);
 }
 
+
+main {
+    min-height: 100vh;
+}
+
 #promoted-products {
 	display: flex;
 	flex-wrap: wrap;
