--- a/vite-app/src/styles/ProductComp.css
+++ b/vite-app/src/styles/ProductComp.css
@@ -1,17 +1,24 @@
 .product {
-    display : flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
 
-    border: solid 1px #000000;
-    border-radius: 10px;
-    background-color: #fff;
+	/* border: solid 1px #000000;
+	border-radius: 10px; */
+	background-color: #fff;
+	height: 100%;
+	padding: 1rem;
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	text-align: center;
+}
 
-
+.product:hover {
+	transform: scale(1.05);
+	box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.15);
 }
 
 .image {
-    width: 50%;
+	width: 50%;
 }
-
