--- a/vite-app/src/styles/product.css
+++ b/vite-app/src/styles/product.css
@@ -7,17 +7,6 @@
   width: 80px;
 }
 
-.carousel .slider-wrapper .slide img {
-  width: 70%;
-  margin: auto;
-  padding: 1.5rem;
-}
-
-.carousel .thumbs img {
-  width: 60px;
-  height: auto;
-}
-
 body {
   background-color: #f6f6f6;
 }
@@ -27,27 +16,81 @@ main {
   margin-top: 6rem;
 }
 
+.custom-size {
+  width: auto;
+  height: 60%;
+}
+
 .embla {
-    overflow: hidden;
-    max-height: 500px;
-    }
+  max-width: 48rem;
+  height: fit-content;
+  margin: auto;
+  --slide-height: 19rem;
+  --slide-spacing: 1rem;
+  --slide-size: 100%;
+}
+
+.embla__viewport {
+  overflow: hidden;
+  height: fit-content;
+}
 
 .embla__container {
-    display: flex;
-    max-height: 100%;
-    justify-content: center;
-    }
+  display: flex;
+  touch-action: pan-y pinch-zoom;
+  margin-left: calc(var(--slide-spacing) * -1);
+  max-height: 500px;
+  justify-content: center;
+}
 
 .embla__slide {
-    display: flex;
-    justify-content: center;
-    flex: 0 0 100%;
-    min-width: 0;
-    max-height: 100%;
-    }
+  display: flex;
+  transform: translate3d(0, 0, 0);
+  flex: 0 0 var(--slide-size);
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+  justify-content: center;
+}
 
-.custom-size {
-    width: auto;
-    height: 80%;
-    /* object-fit: cover; Behåll proportioner och beskära om nödvändigt */
-    }
+.embla__slide__number {
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+  border-radius: 1.8rem;
+  font-size: 4rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--slide-height);
+  user-select: none;
+}
+
+/* Style product data tabel */
+.product-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  .category-header {
+    text-align: left;
+    font-size: 1.1rem;
+    padding-top: 15px;
+    border-bottom: 1px solid #ccc;
+    background-color: #f9f9f9;
+  }
+  
+  .attribute-row td {
+    padding: 8px;
+    border-bottom: 1px solid #eee;
+  }
+  
+  .attribute-name {
+    width: 50%;
+    font-weight: bold;
+    color: #333;
+  }
+  
+  .attribute-value {
+    color: #555;
+  }
+  
