--- a/vite-app/src/styles/product.css
+++ b/vite-app/src/styles/product.css
@@ -50,47 +50,45 @@ main {
   min-width: 0;
   padding-left: var(--slide-spacing);
   justify-content: center;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
-.embla__slide__number {
-  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  border-radius: 1.8rem;
-  font-size: 4rem;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: var(--slide-height);
-  user-select: none;
-}
-
-/* Style product data tabel */
+/* Style product data table */
 .product-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
+  width: 80%;
+  border-collapse: collapse;
+  margin-top: 20px;
+  padding: 0.75rem;
+}
+
+.category-header {
+  text-align: left;
+  font-size: 1.1rem;
+  padding-top: 15px;
+  border-bottom: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+
+.attribute-row td {
+  padding: 8px;
+  border-bottom: 1px solid #eee;
+}
+
+.attribute-name {
+  width: 50%;
+  font-weight: bold;
+  color: #333;
+}
+
+.attribute-value {
+  color: #555;
+}
   
-  .category-header {
-    text-align: left;
-    font-size: 1.1rem;
-    padding-top: 15px;
-    border-bottom: 1px solid #ccc;
-    background-color: #f9f9f9;
-  }
-  
-  .attribute-row td {
-    padding: 8px;
-    border-bottom: 1px solid #eee;
-  }
-  
-  .attribute-name {
-    width: 50%;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .attribute-value {
-    color: #555;
-  }
-  
+
+/* Style accordion */
+th.category-header {
+  background-color: #fff;
+  border-bottom: none;
+  padding: 0.5rem 0;
+}
